--- a/posenet/accelerate_config.yaml
+++ b/posenet/accelerate_config.yaml
@@ -1,7 +1,7 @@
 compute_environment: LOCAL_MACHINE
 distributed_type: MULTI_GPU
 downcast_bf16: 'no'
-gpu_ids: all
+gpu_ids: [1,2,3,4]
 machine_rank: 0
 main_training_function: main
 mixed_precision: fp16
@@ -12,4 +12,6 @@ same_network: true
 tpu_env: []
 tpu_use_cluster: false
 tpu_use_sudo: false
-use_cpu: false 
+use_cpu: false
+main_process_ip: localhost
+main_process_port: 29500 
